plugins/overview: Reuse KRunner manager

This will allow for more efficient querying, because we do not query
twice and some plugins have a instance-local cache.
Also, we do not run into threading issues, for example in libqalculate

BUG: 483147