src/plugins/overview/overvieweffect.h
@@ -8,10 +8,10 @@
 
 #include "effect/effecttogglablestate.h"
 #include "effect/quickeffect.h"
+#include <KRunner/RunnerManager>
 
 namespace KWin
 {
-
 class VirtualDesktop;
 
 class OverviewEffect : public QuickSceneEffect
@@ -28,7 +28,7 @@ class OverviewEffect : public QuickSceneEffect
     Q_PROPERTY(bool transitionGestureInProgress READ transitionGestureInProgress NOTIFY transitionGestureInProgressChanged)
     Q_PROPERTY(qreal gridPartialActivationFactor READ gridPartialActivationFactor NOTIFY gridPartialActivationFactorChanged)
     Q_PROPERTY(bool gridGestureInProgress READ gridGestureInProgress NOTIFY gridGestureInProgressChanged)
-    Q_PROPERTY(QString searchText MEMBER m_searchText NOTIFY searchTextChanged)
+    Q_PROPERTY(QString searchText MEMBER m_searchText WRITE setSearchText NOTIFY searchTextChanged)
 
 public:
     OverviewEffect();
@@ -55,6 +55,8 @@ public:
     int requestedEffectChainPosition() const override;
     bool borderActivated(ElectricBorder border) override;
     void reconfigure(ReconfigureFlags flags) override;
+
+    void setSearchText(const QString &text);
 
 Q_SIGNALS:
     void animationDurationChanged();
@@ -92,6 +94,7 @@ private:
     QString m_searchText;
     bool m_filterWindows = true;
     int m_animationDuration = 400;
+    KRunner::RunnerManager *const m_manager;
 };
 
 } // namespace KWin
