src/plugins/overview/qml/Main.qml
@@ -796,8 +796,18 @@ FocusScope {
                 anchors.bottom: parent.bottom
                 anchors.horizontalCenter: parent.horizontalCenter
                 width: parent.width / 2
-                height: effect.filterWindows ? parent.height - placeholderMessage.height - Kirigami.Units.largeSpacing : parent.height - Kirigami.Units.largeSpacing
-                queryString: effect.searchText
+                height: effect.filterWindows
+                    ? parent.height - placeholderMessage.height - Kirigami.Units.largeSpacing
+                    : parent.height - Kirigami.Units.largeSpacing
+
+                runnerManager: effect.manager
+
+                // Only bind queryString after init is done. Otherwise, the model initializes its own RunnerManager instance
+                property bool initialized: false
+                queryString: initialized ? effect.searchText : ""
+                Component.onCompleted: {
+                    initialized = true
+                }
 
                 onActivated: {
                     effect.deactivate();
